# pkg/models/models.go
@@ -58,3 +58,8 @@ type Tb_Task_priority struct {
 type ErrorResponse struct {
 	Error string `json:"error"`
 }
+
+type LoginResponse struct {
+	Token string `json:"token"`
+	UserResponse
+}
